# cpp_platformer

./: CMakeLists.txt  README.md  main.cpp
common/: Bounds.cpp  Bounds.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Collider.cpp  Collider.h  EBO.cpp  EBO.h  Line.h  Mesh.cpp  Mesh.h  Outline.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Square.cpp  Square.h  Texture.cpp  Texture.h  Transform.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  WiredSquare.cpp  WiredSquare.h  config.cpp  config.h
resources/shaders/: default.frag  line.vert
